update generator text

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -4,7 +4,11 @@
 <body class="body">
    <div class="container" align="left">
        <h3>Successfully Generated!</h3>
-		<a href="/return-files/" target="blank"><button class='btn btn-default'>Download!</button></a>
+      <a href="/return-files/" target="blank"><button class='btn btn-default'>Download!</button></a>
+      
+      <p>Simply drag and drop that zip file into your /datapacks folder. No need to extract from the
+         zip.
+      </p>
    </div>
 </body>
 {% endblock %}
