--- a/templates/generator.html
+++ b/templates/generator.html
@@ -3,7 +3,9 @@
 {% block body %}
 <body class="body">
    <div class="container" align="left">
+      <h1><a href="/">Home</a></h1>
        <h3>Successfully Generated!</h3>
+       <h3>Download the zip file here:</h3>
       <a href="/return-files/" target="blank"><button class='btn btn-default'>Download!</button></a>
       
       <p>Simply drag and drop that zip file into your /datapacks folder. No need to extract from the
