update help text

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,6 +130,7 @@
                     <div class="service-content">
                         <h5>Windows Minecraft Location</h5>
                         <p>Your Minecraft should be under: %APPDATA%\.minecraft\saves\**your-world-name**\datapacks</p>
+                        <p>Drag and drop in the zip file you just generated</p>
                         <p>Relaunch your Minecraft and break a block and enjoy the randomness!!</p>
                     </div>
                 </div>
@@ -145,6 +146,7 @@
                     <div class="service-content">
                         <h5>MacOS Minecraft Location</h5>
                         <p>Your Minecraft should be under: ~/Library/Application Support/minecraft/saves/**your-world-name**/datapacks</p>
+                        <p>Drag and drop in the zip file you just generated</p>
                         <p>Relaunch your Minecraft and break a block and enjoy the randomness!!</p>
                     </div>
                 </div>
@@ -159,6 +161,7 @@
                     <div class="service-content">
                         <h5>Linux Minecraft Location</h5>
                         <p>Your Minecraft should be under: ~/.minecraft/saves/**your-world-name**/datapacks</p>
+                        <p>Drag and drop in the zip file you just generated</p>
                         <p>Relaunch your Minecraft and break a block and enjoy the randomness!!</p>
                     </div>
                 </div>
