remove unused html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -267,8 +267,9 @@
 <div class="footer-bottom">
     <div class="container">
         <div class="row ">
+            <p class="col-lg-12 footer-text">Original loot generator created by SethBling: <a href="https://youtu.be/3JEXAZOrykQ">Original YouTube Video</a></p>
             <p class="col-lg-12 footer-text "><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://linesmerrill.github.io/MerrillLines/" target="_blank">Merrill Lines</a> using the template <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://linesmerrill.github.io/MerrillLines/" target="_blank">Merrill Lines</a> using the template <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
         </div>    
